# Natural-Gas-Storage-Forecasting

./: README.md  pyproject.toml
dashboard/: Gas_Fundamentals.py
dashboard/pages/: 3_Oil_Fundamentals.py
docs/: README.md  architecture.md  decisions.md  models.md
notebooks/: 01a_storage_preparation.ipynb  01b_weather_preparation.ipynb  02_exploration.ipynb  03_baseline_storage_forecast.ipynb  04_feature-engineering.ipynb  05_model_training.ipynb
src/energy_forecast/: artifacts.py
src/gas_forecast/: cli.py  evaluation.py  plotting.py
src/gas_forecast.egg-info/: SOURCES.txt
src/gas_forecast/data/: __init__.py  balance_api.py  cache.py  features.py  paths.py  storage.py  storage_api.py  storage_transforms.py  storage_validation.py  weather.py  weather_api.py  weather_cache.py  weather_features.py  weather_forecasts.py  weather_locations.py  weather_scenarios.py  weather_validation.py
src/gas_forecast/modeling/: __init__.py  (+9 more)
src/oil_forecast/: fundamentals.py
src/power_forecast/: backtesting.py  fundamentals.py  pipelines.py
tests/: test_asof_inputs.py  test_balance.py  test_cache.py  test_energy_core.py  test_evaluation.py  test_features.py  test_forecasting.py  test_model_experiments.py  test_modeling_backtesting.py  test_modeling_config.py  test_modeling_evaluate.py  test_modeling_splitters.py  test_modeling_trainer.py  test_oil_fundamentals.py  test_plotting.py  test_power_adapters.py  test_power_fundamentals.py  test_power_pipeline.py  test_reconciliation.py  test_regional_backtesting.py  test_storage.py  test_weather.py  test_weather_forecasts.py
(+11 files in other folders)
