[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gas-forecast"
version = "0.1.0"
description = "Modular weekly storage change forecasting for the Gas Market Platform"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "plotly",
    "pyarrow",
    "requests",
    "scikit-learn",
    "statsmodels",
    "streamlit",
    "google-generativeai",
]

[project.scripts]
gas-data = "gas_forecast.cli:main"
power-data = "power_forecast.cli:main"
oil-data = "oil_forecast.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
neural = [
    "neuralforecast",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
